sort output  result by exp code  in html

--- a/src/main/resources/template.html
+++ b/src/main/resources/template.html
@@ -224,7 +224,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="data : ${rawdata}">
+            <tr th:each="data : ${raw_data}">
                 <td th:each="item : ${data}" th:text="${item}">Cell</td>
             </tr>
             </tbody>
