--- a/src/main/resources/template.html
+++ b/src/main/resources/template.html
@@ -199,20 +199,20 @@
 <div class="summary">
     <h2>Content</h2>
     <ol type="1">
-        <li><a href="#M0">Raw Data</a></li>
-        <li><a href="#M1">Quality Control</a></li>
-        <li><a href="#M2">Reads Alignment</a></li>
-        <li><a href="#M3">Peak Calling</a></li>
-        <li><a href="#M4">Peak Annotation</a></li>
-        <li><a href="#M5">GO Analysis</a></li>
-        <li><a href="#M6">Pathway Analysis</a></li>
-        <li><a href="#M7">Motif Analysis</a></li>
+        <li><a href="#raw_data">Raw Data</a></li>
+        <li><a href="#quality_control">Quality Control</a></li>
+        <li><a href="#reads_alignment">Reads Alignment</a></li>
+        <li><a href="#peak_calling">Peak Calling</a></li>
+        <li><a href="#peak_annotation">Peak Annotation</a></li>
+        <li><a href="#go_analysis">GO Analysis</a></li>
+        <li><a href="#pathway_analysis">Pathway Analysis</a></li>
+        <li><a href="#motif_analysis">Motif Analysis</a></li>
         <!--<li><a href="#M8">TSS Plot</a></li>-->
     </ol>
 </div>
 <div class="main">
     <div class="module">
-        <h2 id="M0">Raw Data</h2>
+        <h2 id="raw_data">Raw Data</h2>
         <table>
             <thead>
             <tr>
@@ -227,7 +227,7 @@
         </table>
     </div>
     <div class="module">
-        <h2 id="M1">Quality Control</h2>
+        <h2 id="quality_control">Quality Control</h2>
         <table>
             <thead>
             <tr>
@@ -243,7 +243,7 @@
         <p><img class="indented" src="" alt="Per base quality graph" width="800" height="600"/></p>
     </div>
     <div class="module">
-        <h2 id="M2">Reads Alignment</h2>
+        <h2 id="reads_alignment">Reads Alignment</h2>
         <table>
             <thead>
             <tr>
@@ -259,7 +259,7 @@
         <p><img class="indented" src="" alt="Per base quality graph" width="800" height="600"/></p>
     </div>
     <div class="module">
-        <h2 id="M3">Peak Calling</h2>
+        <h2 id="peak_calling">Peak Calling</h2>
         <table>
             <thead>
             <tr>
@@ -275,7 +275,7 @@
         <p><img class="indented" src="" alt="Per Sequence quality graph" width="800" height="600"/></p>
     </div>
     <div class="module">
-        <h2 id="M4">Peak Annotation</h2>
+        <h2 id="peak_annotation">Peak Annotation</h2>
         <table>
             <thead>
             <tr>
@@ -291,7 +291,7 @@
         <p><img class="indented" src="" alt="Per base sequence content" width="800" height="600"/></p>
     </div>
     <div class="module">
-        <h2 id="M5">GO Analysis</h2>
+        <h2 id="go_analysis">GO Analysis</h2>
         <table>
             <thead>
             <tr>
@@ -307,7 +307,7 @@
         <p><img class="indented" src="" alt="Per sequence GC content graph" width="800" height="600"/></p>
     </div>
     <div class="module">
-        <h2 id="M6">Pathway Analysis</h2>
+        <h2 id="pathway_analysis">Pathway Analysis</h2>
         <table>
             <thead>
             <tr>
@@ -323,16 +323,11 @@
         <p><img class="indented" src="" alt="N content graph" width="800" height="600"/></p>
     </div>
     <div class="module">
-        <h2 id="M7">Motif Analysis</h2>
+        <h2 id="motif_analysis">Motif Analysis</h2>
         <table>
             <thead>
             <tr>
-                <th>Sample</th>
-                <th>Motif 1</th>
-                <th>Motif 2</th>
-                <th>Motif 3</th>
-                <th>Motif 4</th>
-                <th>Motif 5</th>
+                <th th:each="header : ${motif_header}" th:text="${header}"></th>
             </tr>
             </thead>
             <tbody>
