--- a/src/main/resources/template.html
+++ b/src/main/resources/template.html
@@ -240,7 +240,7 @@
             </tr>
             </tbody>
         </table>
-        <p><img class="indented" src="" alt="Per base quality graph" width="800" height="600"/></p>
+        <!--<p><img class="indented" src="" alt="Per base quality graph" width="800" height="600"/></p>-->
     </div>
     <div class="module">
         <h2 id="reads_alignment">Reads Alignment</h2>
@@ -256,7 +256,7 @@
             </tr>
             </tbody>
         </table>
-        <p><img class="indented" src="" alt="Per base quality graph" width="800" height="600"/></p>
+        <!--<p><img class="indented" src="" alt="Per base quality graph" width="800" height="600"/></p>-->
     </div>
     <div class="module">
         <h2 id="peak_calling">Peak Calling</h2>
@@ -272,7 +272,7 @@
             </tr>
             </tbody>
         </table>
-        <p><img class="indented" src="" alt="Per Sequence quality graph" width="800" height="600"/></p>
+        <!--<p><img class="indented" src="" alt="Per Sequence quality graph" width="800" height="600"/></p>-->
     </div>
     <div class="module">
         <h2 id="peak_annotation">Peak Annotation</h2>
@@ -288,7 +288,7 @@
             </tr>
             </tbody>
         </table>
-        <p><img class="indented" src="" alt="Per base sequence content" width="800" height="600"/></p>
+        <!--<p><img class="indented" src="" alt="Per base sequence content" width="800" height="600"/></p>-->
     </div>
     <div class="module">
         <h2 id="go_analysis">GO Analysis</h2>
@@ -304,7 +304,7 @@
             </tr>
             </tbody>
         </table>
-        <p><img class="indented" src="" alt="Per sequence GC content graph" width="800" height="600"/></p>
+        <!--<p><img class="indented" src="" alt="Per sequence GC content graph" width="800" height="600"/></p>-->
     </div>
     <div class="module">
         <h2 id="pathway_analysis">Pathway Analysis</h2>
@@ -320,7 +320,7 @@
             </tr>
             </tbody>
         </table>
-        <p><img class="indented" src="" alt="N content graph" width="800" height="600"/></p>
+        <!--<p><img class="indented" src="" alt="N content graph" width="800" height="600"/></p>-->
     </div>
     <div class="module">
         <h2 id="motif_analysis">Motif Analysis</h2>
@@ -341,7 +341,7 @@
             </tr>
             </tbody>
         </table>
-        <p><img class="indented" src="" alt="Sequence length distribution" width="800" height="600"/></p>
+        <!--<p><img class="indented" src="" alt="Sequence length distribution" width="800" height="600"/></p>-->
     </div>
     <!--<div class="module">-->
     <!--<h2 id="M8">TSS Plot</h2>-->
